# room-counter

./: .gitignore  CMakeLists.txt  README.md  plan2.pln
plans/: plan1.pln  plan2.pln  plan3.pln
src/: Architect.h  Plan.h  PlnLoader.h  main.cpp  test.cpp
test/: ArchitectTest.cpp  CTestTestfile.cmake  PlanTest.cpp  PlnLoaderTest.cpp  test.cpp  tests
